--- a/plugin.xml
+++ b/plugin.xml
@@ -86,7 +86,10 @@
     <source-file src="src/ios/PushPlugin.m"/>
     <header-file src="src/ios/AppDelegate+notification.h"/>
     <header-file src="src/ios/PushPlugin.h"/>
-    <framework src="FirebaseMessaging" type="podspec" spec="~> 2.0.0"/>
+    <!-- <framework src="FirebaseMessaging" type="podspec" spec="~> 10.25.0"/> -->
+    <pods use-frameworks="true">
+        <pod name="Firebase/Messaging" spec="~> 10.25.0" />
+      </pods>
     <framework src="Protobuf" type="podspec" spec="3.25.2"/>
     <framework src="PushKit.framework"/>
   </platform>
